name:                contra-tracer
version:             0.1.0.0
synopsis:            Capturing observables for logging, tracing and monitoring
-- description:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Vieth, Alexander Diemand, Andreas Triantafyllos
maintainer:          alex@well-typed.com
copyright:           2019 IOHK
category:            Logging
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/input-output-hk/contra-tracer

library
  hs-source-dirs:      src
  exposed-modules:     Control.Tracer

  default-language:    Haskell2010
  build-depends:       base
  if impl(ghc < 8.5)
    build-depends:     contravariant
  ghc-options:         -Wall -Werror
